artifact/cadp/2_threads_2_instructions/checker_files/1/test_1.log

svl clean info: [persistent] test_1_none.bcg

"test_1_none.bcg" = generation of "test_1_none.lnt"

svl clean info: [temporary] generator

svl clean info: [temporary] generator.o

svl clean info: [temporary] test_1_none.o

svl clean info: [temporary] test_1_none.err

% lnt.open   "test_1_none.lnt"  generator  "test_1_none.bcg"

lnt.open: translating ``common.lnt'' to ``/tmp/hevrard_lnt.open_DwHKNo/COMMON.lib'' ...

      case access(prog, pc) of Instruction in
	   ^
[/tmp/hevrard_lnt.open_DwHKNo/common:67] warning: ``access'' is replaced by ``{''

      case access(prog, pc) of Instruction in
		      ^
[/tmp/hevrard_lnt.open_DwHKNo/common:67] warning: ``)'' is inserted before ``,''

      case access(prog, pc) of Instruction in
			  ^
[/tmp/hevrard_lnt.open_DwHKNo/common:67] warning: ``('' is inserted before ``)''

      case access(prog, pc) of Instruction in
					   ^
[/tmp/hevrard_lnt.open_DwHKNo/common:67] warning: ``}'' is inserted before ``in''
lnt2lotos: double quotes around function identifiers in ``with'' clauses are deprecated and should be removed (6 occurrences found)
/tmp/hevrard_lnt.open_DwHKNo/common.lnt:34: error:  the predefined function ``access'' should be renamed to ``element''
/tmp/hevrard_lnt.open_DwHKNo/common.lnt:401: warning: variable NUMCU is declared but not used
/tmp/hevrard_lnt.open_DwHKNo/common.lnt:67: error: the type of the expression filtered by this ``case'' statement could
	not be determined. Use type coercion ``V of T'' to solve ambiguity
lnt2lotos: LNT program is semantically incorrect
lnt2lotos: quit
command exit with status 1

svl: ERROR command failed
